use org.beryx.jar and ASM 7.0