@@ -7,12 +7,6 @@ wrapper {
     distributionType = org.gradle.api.tasks.wrapper.Wrapper.DistributionType.ALL
 }
 
-if(!hasProperty('javaCompatibility')) {
-    ext.javaCompatibility = 8
-} else {
-    javaCompatibility = javaCompatibility as int
-    ext.javaCompatibility = javaCompatibility as int
-}
 ext {
     javaVersion = (System.properties['java.specification.version'] ?: 1.0) as double
     if(1.2 <= javaVersion && javaVersion < 2) {
@@ -20,13 +14,10 @@ ext {
     } else {
         javaVersion = (int)javaVersion
     }
-    if(javaVersion < javaCompatibility) {
-        throw new GradleException("Cannot generate java-$javaCompatibility compatible code using a java-$javaVersion compiler")
-    }
 	slf4jVersion = "1.8.0-beta2"
 	springVersion = '5.0.7.RELEASE'
 	c3p0Version = '0.9.5.2'
-	asmVersion = '6.2'
+	asmVersion = '7.0'
 	guavaVersion = '25.1-jre'
 	jacksonVersion = '2.9.6'
 	cassandraDriverVersion = '3.4.0'
@@ -57,6 +48,8 @@ buildscript {
         classpath "gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.2"
         // the task-tree plugin: https://github.com/dorongold/gradle-task-tree
         classpath "gradle.plugin.com.dorongold.plugins:task-tree:1.3"
+
+        classpath "gradle.plugin.org.beryx:badass-jar:1.1.1"
     }
 }
 
@@ -84,10 +77,17 @@ configure(properSubprojects) {
 
     apply plugin: 'java-library'
     apply plugin: 'osgi'
+
+    apply plugin: "org.beryx.jar"
+
     compileJava.options.encoding = StandardCharsets.UTF_8
     compileTestJava.options.encoding = StandardCharsets.UTF_8
 
     apply plugin: 'maven'
+
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
     task createSourcesJar(type: Jar, dependsOn: classes) {
         classifier = 'sources'
         from sourceSets.main.allSource
@@ -175,11 +175,16 @@ configure(properSubprojects) {
     eclipse.classpath.defaultOutputDir = new File("$buildDir/classes/main")
 
     dependencies {
+
+        implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.6.23'
+
         implementation	"org.slf4j:slf4j-api:$slf4jVersion"
         testImplementation('junit:junit:4.11') {
             exclude module: 'hamcrest-core'
         }
-        testImplementation 'org.mockito:mockito-all:1.9.5'
+//        testImplementation 'org.mockito:mockito-all:1.9.5'
+        testImplementation 'org.mockito:mockito-core:2.23.0'
+        testImplementation 'org.hamcrest:hamcrest-core:1.3'
 
         spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.7.1'
     }
@@ -250,181 +255,6 @@ configure(properSubprojects) {
     test {
         testLogging {
             exceptionFormat = 'full'
-        }
-    }
-
-
-    afterEvaluate {
-        javaCompatibility = javaCompatibility as int
-        javadoc {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                if(javaCompatibility >= 9) {
-                    options.addStringOption('-module-path', classpath.asPath)
-                }
-            }
-        }
-
-        compileJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                def compat = (javaCompatibility <= 8) ? JavaVersion.VERSION_1_8 : JavaVersion.VERSION_1_9
-                sourceCompatibility = compat
-                targetCompatibility = compat
-                if(javaCompatibility <= 8) {
-                    sourceSets.main.java.exclude '**/module-info.java'
-                } else {
-                    options.compilerArgs = [
-                            '--module-path', classpath.asPath,
-                            '-Xlint:exports'
-                    ]
-                    classpath = files()
-                }
-            }
-        }
-
-        compileTestJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                def compat = (javaCompatibility <= 8) ? JavaVersion.VERSION_1_8 : JavaVersion.VERSION_1_9
-                sourceCompatibility = compat
-                targetCompatibility = compat
-                if(javaCompatibility >= 9) {
-                    options.compilerArgs = [
-                            '--module-path', classpath.asPath,
-                            '--add-modules', 'junit,org.slf4j',
-                            '--add-reads', "$moduleName=junit",
-                            '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-                    ]
-                    classpath = files()
-                }
-            }
-        }
-
-        test {
-            // Due to a Gradle bug we currently have to skip the tests if javaCompatibility >= 9.
-            // TODO: remove the line below when the Gradle bug https://github.com/gradle/gradle/issues/4981 gets fixed.
-            onlyIf {javaCompatibility <= 8}
-
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                if(javaCompatibility >= 9) {
-                    jvmArgs = [
-                            '--module-path', classpath.asPath,
-                            '--add-modules', 'ALL-MODULE-PATH',
-                            '--add-reads', "$moduleName=junit",
-                            '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-                    ]
-                    classpath = files()
-                }
-            }
-        }
-    }
-
-    task extractModuleInfoClass {
-        doLast {
-            copy {
-                from zipTree(jar.archivePath)
-                include "module-info.class"
-                into "${buildDir}/mod-info-tmp"
-            }
-        }
-    }
-
-    task cleanClassesAndLibs {
-        doLast {
-            delete sourceSets.main.java.outputDir
-            delete jar.archivePath
-        }
-    }
-
-    task insertInfoClass() {
-        doLast {
-            jar {
-                from file("$buildDir/mod-info-tmp/module-info.class")
-            }.execute()
-        }
-    }
-
-    task copyInfoClass() {
-        doLast {
-            copy {
-                from "$buildDir/mod-info-tmp/module-info.class"
-                into "$buildDir/classes/java/main"
-            }
-        }
-    }
-}
-
-afterEvaluate {
-    ['extractModuleInfoClass', 'cleanClassesAndLibs', 'insertInfoClass'].each { taskName ->
-        task "${taskName}All"(dependsOn: properSubprojects*."$taskName") { }
-    }
-
-    task jarWithJava9(type: GradleBuild) {
-        startParameter = rootProject.gradle.startParameter.newBuild()
-        startParameter.excludedTaskNames.addAll(rootProject.gradle.startParameter.excludedTaskNames)
-        startParameter.projectProperties.putAll(rootProject.gradle.startParameter.projectProperties)
-        startParameter.projectProperties.javaCompatibility = 9
-        buildFile = './build.gradle'
-        tasks = ['clean', 'jar']
-    }
-    task jarWithJava8(type: GradleBuild) {
-        startParameter = rootProject.gradle.startParameter.newBuild()
-        startParameter.excludedTaskNames.addAll(rootProject.gradle.startParameter.excludedTaskNames)
-        startParameter.projectProperties.putAll(rootProject.gradle.startParameter.projectProperties)
-        startParameter.projectProperties.javaCompatibility = 8
-        buildFile = './build.gradle'
-        tasks = ['cleanClassesAndLibsAll', 'jar']
-    }
-    task modularJar(dependsOn: [jarWithJava9, extractModuleInfoClassAll,
-                                     jarWithJava8, insertInfoClassAll]) {
-        group = 'build'
-        description = "Assembles a java-8 compatible archive containing the main classes and a java-9 module-info.class"
-        extractModuleInfoClassAll.mustRunAfter jarWithJava9
-        jarWithJava8.mustRunAfter extractModuleInfoClassAll
-        insertInfoClassAll.mustRunAfter jarWithJava8
-    }
-
-    task buildWithJava9(type: GradleBuild) {
-        startParameter.excludedTaskNames.addAll(rootProject.gradle.startParameter.excludedTaskNames)
-        startParameter.projectProperties.putAll(rootProject.gradle.startParameter.projectProperties)
-        startParameter.projectProperties.javaCompatibility = 9
-        buildFile = './build.gradle'
-        tasks = ['clean', 'build']
-    }
-    task buildWithJava8(type: GradleBuild) {
-        startParameter.excludedTaskNames.addAll(rootProject.gradle.startParameter.excludedTaskNames)
-        startParameter.projectProperties.putAll(rootProject.gradle.startParameter.projectProperties)
-        startParameter.projectProperties.javaCompatibility = 9
-        buildFile = './build.gradle'
-        tasks = ['cleanClassesAndLibsAll', 'build']
-    }
-    task modularBuild(dependsOn: [buildWithJava9, extractModuleInfoClassAll,
-                                buildWithJava8, insertInfoClassAll]) {
-        group = 'build'
-        description = "Assembles and tests this project, creating a java-8 compatible jar that contains a java-9 module-info.class"
-        extractModuleInfoClassAll.mustRunAfter buildWithJava9
-        buildWithJava8.mustRunAfter extractModuleInfoClassAll
-        insertInfoClassAll.mustRunAfter buildWithJava8
-    }
-
-    // Create and save the module-info.class files before runing uploadArchives
-    uploadArchives {
-        dependsOn jarWithJava9, extractModuleInfoClassAll, cleanClassesAndLibsAll
-        extractModuleInfoClassAll.mustRunAfter jarWithJava9
-        cleanClassesAndLibsAll.mustRunAfter extractModuleInfoClassAll
-    }
-}
-
-gradle.taskGraph.whenReady {taskGraph ->
-    if (javaVersion < 9 && (taskGraph.hasTask(jarWithJava9) || taskGraph.hasTask(buildWithJava9))) {
-        throw new GradleException("You need a java-9 or newer compiler to execute this task.")
-    }
-    // Skip the copyInfoClass task when using java-9 compatibility
-    if(javaCompatibility >= 9) {
-        taskGraph.allTasks.findAll{it.name == 'copyInfoClass'}.each {
-            it.onlyIf { false }
         }
     }
 }
@@ -595,6 +425,8 @@ project(':projects:copper-coreengine') {
     dependencies {
         api project(':projects:copper-jmx-interface')
 
+        compile	"org.slf4j:slf4j-api:$slf4jVersion"
+
         // asm
         implementation "org.ow2.asm:asm:$asmVersion"
         implementation "org.ow2.asm:asm-commons:$asmVersion"
@@ -662,5 +494,4 @@ project(':projects:copper-performance-test') {
 	    }
 
 	}
-
 }
